- in CarController use annotation swagger @Operation for describe requests and moved method for mapper object from carEntity in carDTO in service layer; - in CarService interface delete 2 methods because them were declared private in ServiceImpl; - in CarServiceImp change logic in method findById and create a new private method for mapper from carOptional in carDTO; - in CarServiceImpTest delete 2 private method; - add new test for CarController layer, in this class test add new method for convert object to Json string and create test for 2 get requests;